Update GreedCommand.java